$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-22 (opened November 19, 2012)

	* monoMDS: scores() ignores now requests to scores beyond those
	calculated instead of failing.

	* nestednodf: added plot() method modelled after
	plot.nestedtemp().
	
	* ordiR2step: gained argument 'R2scope' (default TRUE) which can
	be used to turn off the criterion of stopping when the adj-R2 of
	the current model exceeds that of scope.  This option allows model
	building when the 'scope' would be overdetermined (number of
	predictors higher than number of observations). Pierre Legendre
	needed this option for some checks with huge AEM/PCNM scopes.

Version 2.1-21 (closed November 19, 2012)

	* New version opened with the CRAN release of vegan 2.0-5 on Oct
	8, 2012.

	* dispindmorisita: output gained a new column for Chi-squared
	based probabilities that the null hypothesis (random distribution)
	is true.

	* clamtest: output was wrong when some of the possible
	species groups were missing (bug report submitted by R Telford).

	* procrustes: plot() of two-dimensional solutions often draw
	original axes in a wrong angle. The problem was reported by
	Elizabeth Ottesen (MIT).

	* msoplot: gained legend argument for positioning the legend
	according to user needs.

Version 2.1-20 (closed October 8, 2012)

	* anova.cca: Dr Sven Neulinger (Christian Albrecht University,
	Kiel, Germany) reported several problems with anova.cca cases. All
	these were problems in scoping. Two problems solved with this
	commit were: (1) anova.cca(..., by = "axis") always failed in
	partial analysis (with conditions), (2) anova.cca(..., by =
	"term") failed in partial models when there was no 'data='
	argument, but the variables were in the global workspace. The
	first fix also seems to allow anova(<prc.object>, by = "axis")
	that used to fail. In addition, there is one unsolved problem with
	search order: stats function C() is found instead of variable 'C'